@@ -8,7 +8,7 @@
 
 // macro browser help window
 "F1         показать эту справку"
-"F3         информация о макросе или событии"
+"F3         информация о макросе или обработчике события"
 "F4         открыть файл в редакторе"
 "AltF4      открыть файл в модальном редакторе"
 "CtrlPgUp   перейти к файлу на активной панели"
@@ -16,7 +16,7 @@
 "CtrlF2     сортировать макросы по ключу"
 "CtrlF3     сортировать макросы по описанию"
 "Enter      исполнить выделенный макрос"
-"CtrlH      спрятать неактивные макросы"
+"CtrlH      спрятать/показать неактивные макросы"
 
 // macro browser separators
 "Макросы"
