@@ -1,4 +1,8 @@
-﻿shmuel 18.07.2016 15:59:19 +0200 - build 579
+﻿shmuel 18.07.2016 17:55:32 +0200 - build 580.
+
+1. Макро-браузер отображает поле "id" в диалоге информации о макросе.
+
+shmuel 18.07.2016 15:59:19 +0200 - build 579
 
 1. В таблицы определений Macro и Event добавлено опциональное поле "id" типа string.
 
